// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Bar Bottom Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 2`] = `
Array [
  0.35,
  0,
  0,
  0.0175,
  0,
  0.35,
  0,
  -0.1281,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 3`] = `
Array [
  0.07,
  0,
  0,
  0,
  0,
  0.0826,
  0,
  -0.0056,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 2`] = `
Array [
  0.35,
  0,
  0,
  0.0175,
  0,
  0.35,
  0,
  0.1498,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 3`] = `
Array [
  0.07,
  0,
  0,
  0,
  0,
  0.0826,
  0,
  -0.0056,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
